--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="green-section container">
         <div class="row">
             <div class="col s12">
-                <img src="img/greenbackground.png" alt="">
+                <img class="background-green" src="img/greenbackground.png" alt="">
             </div>
         </div>
         <div class="row">
@@ -64,13 +64,54 @@
         <div class="row">
             <div class="col s12">
                 <div class="col s6">
-                   <a href="">NewsFeed </a> 
-
+                    <a href="">NewsFeed </a>
                 </div>
                 <div class="col s6 right">
-                   <a href=""> More news</a>
+                    <a href=""> More news</a>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col s6">
+                <p>06/13/2017</p>
+                <h5>A New and Improved Google Design</h5>
+                <div class="row">
+                    <div class="col s12">
+                        <img class="design" src="img/GoogleDesign.jpg" alt="">
+                    </div>
+                </div>
+                <p>We have got a fresh, new look! Now its easier than ever to find the articles, news, and tools you love right
+                    from the homepage. Take a few minutes to explore our new story collections for in-depth insights on everything
+                    from branding to SPAN, and visit our new and improved jobs page to find out what its really like to work
+                    with us. We have got a few more surprises in store, so sign up for our newsletter...
+                </p>
+            </div>
+            <div class="col s6">
+                <p>06/15/2017</p>
+                <h5>Join the Material Gallery Early Adopter Program</h5>
+                <p>Like staying ahead of the curve when it comes to design tools? Meet Gallery, a design collaboration app that
+                    makes it easy to find, present, and discuss work from a shared, central place. Brought to you by the
+                    Material Design... </p>
+                <p>06/08/2017</p>
+                <h5>Google Design Medium Round-Up</h5>
+                <p>Check out a handful of our latest and greatest MEdium articles: Learn how Google redesigned over 2,000 emoji
+                    to make them more expressive than ever; Watch the top design talks from I/O 2017 in our Definitive Design...
+                </p>
+                <h5>Material Components for Android, iOS, and the Web</h5>
+                <p>Making Material just got easier. The new Material Components site features a library of components and expandend
+                    documentation that let you build easily for Android, iOS, and the web using open-source code. The...
+                </p>
+                <div class="row">
+                    <div class="col s6">
+                        <p>Want to stay up-to date with Google Design</p>
+                        <a href="">Sign up for our Newsletter</a>
+                    </div>
+                    <div class="col s6">
+                        <img class="logo" src="img/gdlogo.png" alt="">
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
