--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
     <!--CSS-->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/sass/main.css">
 </head>
 
 <body>
@@ -111,7 +111,20 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+    </section>
+    <!--third section-->
+    <section class="container third-section">
+        <div class="divider"></div>
+        <div class="row">
+            <div class="col s6 ">
+                <img  src="img/sticky_conversations.jpg" alt="">
+            </div>
+            <div class="col s6">
+                <img   src="img/digital_natives.jpg" alt="">
+
+            </div>
         </div>
     </section>
 
