third section created

--- a/index.html
+++ b/index.html
@@ -119,10 +119,46 @@
         <div class="divider"></div>
         <div class="row">
             <div class="col s6 ">
-                <img  src="img/sticky_conversations.jpg" alt="">
+                <img src="img/sticky_conversations.jpg" alt="">
+                <h5>Sticky Conversation</h5>
+                <p>Allo stickers sets balance the universal and unique</p>
+                <p>Case Study</p>
             </div>
             <div class="col s6">
-                <img   src="img/digital_natives.jpg" alt="">
+                <img src="img/digital_natives.jpg" alt="">
+                <h5>No Such Things as Offline</h5>
+                <p>DIgital natives are redesigning the way we build tech one tap at a time</p>
+                <p>Case Study</p>
+
+            </div>
+        </div>
+         <div class="row">
+            <div class="col s6 ">
+                <img src="img/span_la_.jpg" alt="">
+                <h5>Guide to SPAN Tokyo</h5>
+                <p>Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudijc, Mariya Suzuki, and Keiichi Tanaami</p>
+                <p>Guide</p>
+            </div>
+            <div class="col s6">
+                <img src="img/airbnb.jpg" alt="">
+                <h5>Airbnb: Communicating Clarity and Charm</h5>
+                <p>How a trusted travel app plays host to a growing, global community</p>
+                <p>Case Study</p>
+
+            </div>
+        </div>
+         <div class="row">
+            <div class="col s6 ">
+                <img src="img/span_la_.jpg" alt="">
+                <h5>SPAN 2016: Los Angeles</h5>
+                <p>Explore everything from Processing and robotics to production design at our Los Angeles conference</p>
+                <p> design.google</p>
+            </div>
+            <div class="col s6">
+                <img src="img/design_is_never_done.jpg" alt="">
+                <h5>Design Is Never Done</h5>
+                <p>Material Design's new suite of tools and guidelines -all in one place </p>
+                <p>Editorial</p>
 
             </div>
         </div>
