maqueta and styles finished

--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
 
             </div>
         </div>
-         <div class="row">
+        <div class="row">
             <div class="col s6 ">
                 <img src="img/span_la_.jpg" alt="">
                 <h5>Guide to SPAN Tokyo</h5>
-                <p>Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudijc, Mariya Suzuki, and Keiichi Tanaami</p>
+                <p>Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudijc, Mariya
+                    Suzuki, and Keiichi Tanaami</p>
                 <p>Guide</p>
             </div>
             <div class="col s6">
@@ -147,7 +148,7 @@
 
             </div>
         </div>
-         <div class="row">
+        <div class="row">
             <div class="col s6 ">
                 <img src="img/span_la_.jpg" alt="">
                 <h5>SPAN 2016: Los Angeles</h5>
@@ -163,7 +164,54 @@
             </div>
         </div>
     </section>
+    <!--footer-->
+    <footer class="container">
+        <div class="divider"></div>
+        <div class="row">
+            <div class="col s4">
+                <h6>Google Design</h6>
+                <p>Google Design is a cooperative effort led by a group of designers, writers, and developers at Google to support
+                    and further design and technology. Our Medium collection features highlights from design.google.com,
+                    and original content written by designers and engineers at Google.</p>
+            </div>
+            <div class="col s4">
+                <h6>Discover</h6>
+                <p>The Keyword</p>
+                <p>Material Design</p>
+                <p>Google</p>
 
+            </div>
+            <div class="col s4">
+                <h6>Connect</h6>
+                <div class="row">
+                    <div class="col s6">
+                        <a href="">Newsletter</a><br>
+                        <a href="">Google+</a><br>
+                        <a href="">Twitter</a><br>
+                        <a href="">Youtube</a>
+
+                    </div>
+                    <div class="col s6">
+                        <a href="">Facebook</a><br>
+                        <a href="">Medium</a><br>
+                        <a href="">Dribble</a><br>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="divider-gray"></div>
+        <div class="footer-final">
+            <div class="row">
+                <div class="col s6">
+                    <img src="img/google-g.svg" alt="">
+                </div>
+                <div class="col s6 ">
+                    <a href="" class="right">Privacy & Terms</a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Materialize-->
