--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         </div>
     </section>
     <!--footer-->
-    <footer class="container">
+    <footer class="container ">
         <div class="divider"></div>
-        <div class="row">
+        <div class="row text">
             <div class="col s4">
                 <h6>Google Design</h6>
                 <p>Google Design is a cooperative effort led by a group of designers, writers, and developers at Google to support
